<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tuV-mM-W8Y">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movies List View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="MoviesListViewController" id="BYZ-38-t0r" customClass="MoviesListViewController" customModule="moviesList" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YCJ-7E-7b3">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YCJ-7E-7b3" secondAttribute="trailing" id="4ui-dG-OdI"/>
                            <constraint firstItem="YCJ-7E-7b3" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="CAe-WZ-HjS"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YCJ-7E-7b3" secondAttribute="bottom" id="YOE-sX-S6w"/>
                            <constraint firstItem="YCJ-7E-7b3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="eYu-BE-N4m"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="gu8-ZA-cyo">
                        <barButtonItem key="rightBarButtonItem" title="add movie" id="6i1-Nk-cqR">
                            <connections>
                                <action selector="addMovie" destination="BYZ-38-t0r" id="0wz-ui-LJI"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="tableView" destination="YCJ-7E-7b3" id="zMZ-FR-gtf"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="476" y="103.89805097451276"/>
        </scene>
        <!--Add Movie View Controller-->
        <scene sceneID="1S7-4g-umf">
            <objects>
                <viewController storyboardIdentifier="AddMovieViewController" id="1Na-SO-Kph" customClass="AddMovieViewController" customModule="moviesList" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="04l-RS-LEB">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="KnN-9K-Abc">
                                <rect key="frame" x="0.0" y="30" width="375" height="607"/>
                                <subviews>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultPoster" translatesAutoresizingMaskIntoConstraints="NO" id="A7P-HJ-nOo">
                                        <rect key="frame" x="67.5" y="0.0" width="240" height="250"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="250" id="K88-Ol-EQb"/>
                                            <constraint firstAttribute="width" constant="240" id="nDy-9k-gvG"/>
                                        </constraints>
                                    </imageView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="SUC-T5-mdX">
                                        <rect key="frame" x="87.5" y="260" width="200" height="65"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Movie Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4QJ-P2-e2y">
                                                <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Movie OverView" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tt6-vC-72I">
                                                <rect key="frame" x="0.0" y="35" width="200" height="30"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                        </subviews>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="ZeN-ua-RgF"/>
                                        </constraints>
                                    </stackView>
                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="hV0-qA-pGk">
                                        <rect key="frame" x="27.5" y="335" width="320" height="150"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="150" id="k3e-aY-0fT"/>
                                        </constraints>
                                        <date key="date" timeIntervalSinceReferenceDate="582286809.52449906">
                                            <!--2019-06-15 10:20:09 +0000-->
                                        </date>
                                    </datePicker>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f8g-Mi-0kH">
                                        <rect key="frame" x="0.0" y="495" width="375" height="112"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                        <state key="normal" title="Add"/>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="f8g-Mi-0kH" firstAttribute="width" secondItem="KnN-9K-Abc" secondAttribute="width" id="vjx-yY-fht"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <constraints>
                            <constraint firstItem="Set-UU-srW" firstAttribute="bottom" secondItem="KnN-9K-Abc" secondAttribute="bottom" constant="30" id="KD5-8f-OW7"/>
                            <constraint firstItem="Set-UU-srW" firstAttribute="trailing" secondItem="KnN-9K-Abc" secondAttribute="trailing" id="Yjb-mQ-AOf"/>
                            <constraint firstItem="KnN-9K-Abc" firstAttribute="top" secondItem="Set-UU-srW" secondAttribute="top" constant="10" id="oEl-Pj-g78"/>
                            <constraint firstItem="KnN-9K-Abc" firstAttribute="leading" secondItem="Set-UU-srW" secondAttribute="leading" id="vs9-4I-btR"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Set-UU-srW"/>
                    </view>
                    <connections>
                        <outlet property="image" destination="A7P-HJ-nOo" id="SI8-U7-4Pf"/>
                        <outlet property="movieDate" destination="hV0-qA-pGk" id="cte-R0-zQU"/>
                        <outlet property="movieOverview" destination="tt6-vC-72I" id="0rB-AZ-O29"/>
                        <outlet property="movieTitle" destination="4QJ-P2-e2y" id="4Sf-hA-TOG"/>
                        <outlet property="submitButton" destination="f8g-Mi-0kH" id="G2d-By-iiv"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Gxa-Wr-bko" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1132" y="104"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="vjT-eY-UcQ">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tuV-mM-W8Y" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zlz-n0-cqr">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="JxT-2j-2ZP"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Jww-HM-8SL" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-246" y="104"/>
        </scene>
    </scenes>
    <resources>
        <image name="defaultPoster" width="318" height="411"/>
    </resources>
</document>
